--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -495,6 +495,24 @@ functions:
           path: /attendee_groups
           method: patch   
 
+  MealReminder:
+    runtime: python3.11
+    handler: meal_reminder/lambda_function.lambda_handler
+    name: "${sls:stage}-meal_reminder"
+    package:
+      patterns:
+        - '!**/**'
+        - "meal_reminder/**"
+        - "shared/**"
+    environment:
+      STAGE_NAME: ${sls:stage}
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+      SEND_EMAIL_LAMBDA: "${sls:stage}-send_email"
+    events:
+      - httpApi:
+          path: /meal/send_reminder
+          method: get          
+
 
 
 
