--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -495,6 +495,8 @@ functions:
           path: /attendee_groups
           method: patch   
 
+#--------------------
+
   MealReminder:
     runtime: python3.11
     handler: meal_reminder/lambda_function.lambda_handler
@@ -513,6 +515,24 @@ functions:
           path: /meal/send_reminder
           method: get          
 
+#--------------------
+
+  MealGroups:
+    runtime: python3.11
+    handler: meal_groups/lambda_function.lambda_handler
+    name: "${sls:stage}-meal_groups"
+    package:
+      patterns:
+        - '!**/**'
+        - "meal_groups/**"
+        - "shared/**"
+    environment:
+      STAGE_NAME: ${sls:stage}
+      EVENT_TABLE_NAME: ${param:eventTableName}
+    events:
+      - httpApi:
+          path: /meal/groups
+          method: get          
 
 
 
