send upgrade link if requested

--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -460,6 +460,7 @@ functions:
     environment:
       STAGE_NAME: ${sls:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+      EVENT_TABLE_NAME: ${param:eventTableName}
       SEND_EMAIL_LAMBDA: "${sls:stage}-send_email"
     events:
       - httpApi:
