add env variable to lambda

--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -325,6 +325,7 @@ functions:
     environment:
       STAGE_NAME: ${sls:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+      EVENT_TABLE_NAME: ${param:eventTableName}
     # layers:
     #   - !Ref DynamodbLambdaLayer
     #   - !Ref GithubLambdaLayer
